# trustlend-stellar

./: .env.example  .gitignore  OPTIMIZATION_SUMMARY.md  POOL_OPTIMIZATION.md  QUICK_START_POOL_QUERIES.md  README.md  SEP24_FIAT_RAMP.md  SOROBAN_INDEXER_MIGRATION.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  project.yaml  proxy.ts  schema.graphql  vercel.json
app/: globals.css  layout.tsx  (+1 more)
contracts/: Cargo.toml  GOVERNANCE.md  ORACLE_INTEGRATION.md
contracts/borrower_reputation/: Cargo.toml
contracts/borrower_reputation/src/: lib.rs  test.rs
contracts/borrower_reputation/test_snapshots/test/: test_cannot_submit_for_frozen_account.1.json  test_default_tier.1.json  test_high_score_gets_better_rate_and_higher_limit.1.json  test_initialization.1.json  test_limits_scale_with_reputation_event_history.1.json  test_low_score_stays_in_none_tier_with_base_terms.1.json  test_non_oracle_cannot_submit.1.json  test_oracle_boost_stacks_on_tier_limit.1.json  test_oracle_score_boosts_max_loan.1.json  test_oracle_score_partial_boost.1.json  test_set_and_get_oracle.1.json  test_stale_oracle_data_is_ignored.1.json
contracts/default_management/: Cargo.toml
contracts/default_management/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_deposit_and_withdraw_emit_events.1.json
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/lending/: Cargo.toml
contracts/lending/src/: lib.rs  test.rs
contracts/scripts/: deploy.ps1  deploy.sh
(+168 files in other folders)
